# PRAT

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  REPRODUCIBILITY.md  ROADMAP.md  paper_expected_results.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  paper-validation.yml
App/mosquitto_Ryan/coverage_files_WITH_TLS_no/: alias_mosq.c.gcov  conf.c.gcov  context.c.gcov  handle_connect.c.gcov  handle_suback.c.gcov  handle_unsuback.c.gcov  handle_unsubscribe.c.gcov  logging.c.gcov  loop.c.gcov  memory_mosq.c.gcov  misc_mosq.c.gcov  net.c.gcov  net_mosq.c.gcov  packet_datatypes.c.gcov  plugin.c.gcov  security_default.c.gcov  send_auth.c.gcov  send_publish.c.gcov  send_subscribe.c.gcov  send_unsuback.c.gcov  session_expiry.c.gcov  utf8_mosq.c.gcov  util_mosq.c.gcov  will_delay.c.gcov
App/mosquitto_Ryan/coverage_files_WITH_TLS_yes/: conf.c.gcov  conf_includedir.c.gcov  context.c.gcov  database.c.gcov  handle_auth.c.gcov  handle_connack.c.gcov  handle_connect.c.gcov  handle_disconnect.c.gcov  handle_ping.c.gcov  handle_pubackcomp.c.gcov  handle_publish.c.gcov  handle_pubrec.c.gcov  handle_pubrel.c.gcov  handle_subscribe.c.gcov  loop.c.gcov  mosquitto.c.gcov  mosquitto_passwd.c.gcov  net.c.gcov  net_mosq.c.gcov  net_mosq_ocsp.c.gcov  packet_mosq.c.gcov  plugin.c.gcov  property_broker.c.gcov  property_mosq.c.gcov  read_handle.c.gcov  security.c.gcov  security_default.c.gcov  send_connack.c.gcov  send_connect.c.gcov  send_disconnect.c.gcov  send_mosq.c.gcov  send_suback.c.gcov  send_unsubscribe.c.gcov  signals.c.gcov  subs.c.gcov  time_mosq.c.gcov  tls_mosq.c.gcov  util_mosq.c.gcov  util_topic.c.gcov  will_mosq.c.gcov  (+2 more)
docker/: README.md
docker/demo1/: Dockerfile
docker/demo2/: Dockerfile
docker/demo3/: Dockerfile
docker/demo4/: Dockerfile
docker/demo5/: Dockerfile
docker/demo6/: Dockerfile
docker/demo7/: Dockerfile
docker/klee/: Dockerfile
docs/: API.md  EXAMPLES.md  PAPER_ALIGNMENT.md  TROUBLESHOOTING.md
docs/sample-results/: README.md  validation_report.json
docs/sample-results/aom-encoder/: manifest.json  workflow_checkpoint.json
docs/sample-results/ffmpeg-x264/: manifest.json  workflow_checkpoint.json
docs/sample-results/mosquitto-bridge/: manifest.json  workflow_checkpoint.json
docs/sample-results/mosquitto-tls/: manifest.json  workflow_checkpoint.json
docs/sample-results/opendds-security/: manifest.json  workflow_checkpoint.json
docs/sample-results/quiche-ffdhe/: BLOCKED.json  manifest.json  workflow_checkpoint.json
docs/sample-results/uamqp-websockets/: manifest.json  workflow_checkpoint.json
results/mosquitto-tls/: report.json
scripts/: fetch-targets.sh  validate_paper_results.py
site-assets/prat/: AGENT_PROMPT.md  README.md  mosquitto-tls-demo.json  project-brief.md
src/: Makefile  PRAT.py  README.md  demo-runner.py  demo_workflow.py  prat_cli.py
src/buildparser/: buildparser.py
src/prat/: __init__.py  __main__.py  batch.py  cli.py  compilation.py  coverage.py  diff.py  discovery.py  docker_runner.py  environment.py  extraction.py  feature_graph.py  removal.py  reporting.py  symbolic.py  verification.py  workflow.py
src/prat/adapters/: __init__.py  aom.py  base.py  cmake.py  ffmpeg.py  mosquitto.py  opendds.py  rust.py  uamqp.py
src/tests/: test_adapters.py  test_batch.py  test_compilation.py  test_coverage.py  test_diff.py  test_environment.py  test_extraction.py  test_feature_graph.py  test_removal.py  test_reporting.py  test_symbolic.py  test_verification.py  test_workflow.py
(+3 files in other folders)
