[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prat"
version = "0.2.0"
description = "Protocol Representation and Analysis Toolkit — identify and extract feature-specific code from C/C++/Rust projects using compile-time coverage analysis"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Ryan Williams", email = "ryanpwil@amazon.com" }
]
keywords = ["coverage", "debloating", "feature-analysis", "gcov", "security"]

dependencies = [
    "toml>=0.10.2",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.scripts]
prat = "prat.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
# PRAT embeds self-contained HTML/JS reports as Python templates. Wrapping those
# strings to 100 columns makes the generated artifacts harder to maintain.
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
