[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prat"
version = "1.0.0"
description = "Protocol Representation and Analysis Toolkit — identify and extract feature-specific code from C/C++/Rust projects using compile-time coverage analysis"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Ryan Williams", email = "ryan.rpwilliams@gmail.com" }
]
keywords = ["coverage", "debloating", "feature-analysis", "gcov", "firmware", "security"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Security",
    "Topic :: Software Development :: Build Tools",
]

dependencies = [
    "toml>=0.10.2",
    "pandas>=1.3.0",
]

[project.urls]
"Paper (ACM TOSEM)" = "https://doi.org/10.1145/3487568"
Repository = "https://github.com/williamsryan/PRAT"

[project.optional-dependencies]
dev = [
    "build>=1.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "twine>=4.0",
]

[project.scripts]
prat = "prat.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ship the self-contained web UI template (and its docs) inside the wheel so
# prat.reporting.generate_html_report can load it at runtime.
"prat.web" = ["*.html", "*.md"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
# PRAT embeds self-contained HTML/JS reports as Python templates. Wrapping those
# strings to 100 columns makes the generated artifacts harder to maintain.
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
